# feathr-online

./: .dockerignore  .gitignore  Cargo.toml  DSL-syntax.txt  Dockerfile  Dockerfile.arm64  Dockerfile.demo  Dockerfile.multiarch  Dockerfile.x86_64  LICENSE  README.md  build.rs  build_jni.sh  monitoring.md  test.db
.cargo/: audit.toml
.github/workflows/: build_jar.yml  devskim.yml  docker-image.yml  main_piper.yml  maturin.yml  rust.yml
conf/: lookup.json  pipeline.conf
java/: .gitignore  Cargo.toml  README.md  settings.gradle
java/feathrpiper/: .gitignore  build.gradle
java/feathrpiper/src/main/java/com/github/windoze/feathr/piper/: Function0.java  Function1.java  Function2.java  Function3.java  PiperService.java  UdfRepository.java  UserDefinedFunction.java  VarFunction.java
java/feathrpiper/src/main/java/com/linkedin/feathr/online/: Function0.java  Function1.java  Function2.java  Function3.java  PiperService.java  UdfRepository.java  UserDefinedFunction.java  VarFunction.java
java/feathrpiper/src/test/java/com/github/windoze/feathr/piper/: LibraryTest.java
java/feathrpiper/src/test/java/com/linkedin/feathr/online/: LibraryTest.java
java/lib/: build.gradle
java/lib/src/main/java/com/azure/feathr/piper/: Function0.java  Function1.java  Function2.java  Function3.java  PiperService.java  UdfRepository.java  UserDefinedFunction.java  VarFunction.java
java/lib/src/test/java/com/azure/feathr/piper/: LibraryTest.java
java/src/: java_function.rs  jvm_cache.rs  lib.rs  value_utils.rs
piper/: Cargo.toml
piper/src/: common.rs  lib.rs  piper.rs  service.rs
piper/src/pipeline/: dataset.rs  errors.rs  mod.rs  pipelines.rs  value.rs
piper/src/pipeline/aggregation/: all_any.rs  array_agg.rs  count.rs  first_last.rs  min_max.rs  mod.rs  sum.rs
piper/src/pipeline/function/: array_functions.rs  bucket.rs  datetime_functions.rs  extract_json.rs  make_array.rs  misc_functions.rs  mod.rs  rand_functions.rs  regexp.rs  string_functions.rs  timestamp.rs  type_conv.rs
piper/src/pipeline/function/function_wrapper/: binary.rs  mod.rs  nullary.rs  quaternary.rs  ternary.rs  unary.rs  variadic.rs
piper/src/pipeline/lookup/: mod.rs
piper/src/pipeline/lookup/cosmosdb/: mod.rs
piper/src/pipeline/lookup/feathr_online_store/: mod.rs
piper/src/pipeline/lookup/http_json_api/: auth.rs  http.rs
piper/src/pipeline/lookup/local_store/: any_value.rs  mod.rs
piper/src/pipeline/lookup/mssql/: db_conv.rs  mod.rs
piper/src/pipeline/lookup/sqlite/: db_conv.rs  mod.rs
piper/src/pipeline/operator/: comparison_op.rs  function_op.rs  index_op.rs  logical_op.rs  math_op.rs  mod.rs  unary_op.rs
piper/src/pipeline/parser/: aggregation_builder.rs  dsl_parser.rs  expression_builders.rs  mod.rs  pipeline_builder.rs
piper/src/pipeline/parser/operator_builder/: binary_op_builder.rs  function_op_builder.rs  mod.rs  unary_op_builder.rs
piper/src/pipeline/parser/transformation_builder/: distinct_builder.rs  explode_builder.rs  ignore_error_builder.rs  lookup_builder.rs  mod.rs  project_builder.rs  project_keep_builder.rs  project_remove_builder.rs  project_rename_builder.rs  summarize_builder.rs  take_builder.rs  top_builder.rs  where_builder.rs
piper/src/pipeline/transformation/: distinct_transformation.rs  explode_transformation.rs  ignore_error_transformation.rs  lookup_transformation.rs  mod.rs  project_keep_transformation.rs  project_remove_transformation.rs  project_rename_transformation.rs  project_transformation.rs  summarize_transformation.rs  take_transformation.rs  top_transformation.rs  where_transformation.rs
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/examples/: fastapi_example.py  json_agg_demo.py  lookup_example.py  lv_demo.py  pickle_example.py  pyspark_example.py  udf_example.py
python/src/: lib.rs
python/tests/: test_udf.py
src/: main.rs
src/pipeline/: dataset.rs  errors.rs  expression.rs  mod.rs  pipeline.rs  value.rs
src/pipeline/function/: array_functions.rs  bucket.rs  case.rs  datetime_functions.rs  extract_json.rs  function_wrapper.rs  len.rs  make_array.rs  math.rs  misc_functions.rs  mod.rs  rand_functions.rs  split.rs  string_functions.rs  substring.rs  timestamp.rs  to_json.rs  type_conv.rs
src/pipeline/function/function_wrapper/: binary.rs  mod.rs  nullary.rs  ternary.rs  unary.rs  variadic.rs
src/pipeline/lookup/: mod.rs
src/pipeline/lookup/feathr_online_store/: mod.rs
src/pipeline/lookup/http_json_api/: auth.rs  http.rs  mod.rs
src/pipeline/operator/: comparison_op.rs  function_op.rs  index_op.rs  logical_op.rs  math_op.rs  mod.rs  unary_op.rs
src/pipeline/parser/: dsl_parser.rs  expression_builders.rs  mod.rs  parser.rs  pipeline_builder.rs
src/pipeline/parser/operator_builder/: binary_op_builder.rs  function_op_builder.rs  mod.rs  unary_op_builder.rs
src/pipeline/parser/transformation_builder/: explode_builder.rs  ignore_error_builder.rs  lookup_builder.rs  mod.rs  project_builder.rs  project_keep_builder.rs  project_remove_builder.rs  project_rename_builder.rs  take_builder.rs  top_builder.rs  where_builder.rs
src/pipeline/transformation/: explode_transformation.rs  ignore_error_transformation.rs  lookup_transformation.rs  mod.rs  project_keep_transformation.rs  project_remove_transformation.rs  project_rename_transformation.rs  project_transformation.rs  take_transformation.rs  top_transformation.rs  where_transformation.rs
standalone/: Cargo.toml
standalone/src/: main.rs
test-data/: README.md  links.parquet  test.csv  test.json  test_db.sql  test_nd.json
