[package]
name = "piper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
dyn-clonable = "0.9"
thiserror = "1"
once_cell = "1"
peg = "0.8"
chrono = "0.4"
chrono-tz = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["default", "json"]}
jsonpath_lib = "0.3"
base64 = "0.13"
protobuf = "3"
redis = { version = "0.22.1", features = ["tokio-native-tls-comp"] }
bb8 = "0.8"
bb8-redis = "0.12"
regex = "1"
dotenv = "0.15"
clap = { version = "4", features = ["derive", "env"] }
poem = { version = "1", features = ["tokio-metrics"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rust_heap = "0.1"
azure_core = "0.6"
azure_identity = "0.7"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
protobuf-codegen = "3"
