[package]
name = "feathr_piper_jni"
version = "0.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "feathr_piper_jni"

[dependencies]
piper = { path = "../piper", features = [] }
jni = "0.20"
tokio = { features = ["full"], version = "1.0" }
once_cell = "1"
chrono = { version = "0.4", default-features = false }

[target.'cfg(target_env = "musl")'.dependencies]
# Use statically lined openssl when build with musl
openssl = { version = "0.10", features = ["vendored"] }
