[package]
name = "piper"
version = "0.2.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = "1"
futures = "0.3"
anyhow = "1"
thiserror = "1"
once_cell = "1"
peg = "0.8"
chrono = { version = "0.4", default-features = false }
chrono-tz = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["default", "json"]}
jsonpath_lib = "0.3"
base64 = "0.13"
protobuf = "3"
redis = { version = "0.22.1", features = ["tokio-native-tls-comp"] }
bb8 = "0.8"
bb8-redis = "0.12"
regex = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
rust_heap = "0.1"
azure_core = "0.7"
azure_identity = "0.8"
levenshtein = "1.0.5"
uuid = "1"
rand = "*"
dyn-clonable = "0.9"
poem = { version = "1", features = ["tokio-metrics"] }
pyo3 = { version = "0.17", optional = true }
pyo3-asyncio = { version = "0.17", features = ["tokio-runtime"], optional = true }

[build-dependencies]
protobuf-codegen = "3"

[dev-dependencies]
dotenvy = "0.15"

[features]
default = []
python = ["pyo3", "pyo3-asyncio/tokio-runtime"]