[package]
name = "feathrpiper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "feathrpiper"
crate-type = ["cdylib"]

[dependencies]
tokio = "1"
futures = "0.3"
chrono = "0.4"
piper = { path = "../piper" }

[target.'cfg(target_env = "musl")'.dependencies]
# Use statically lined openssl when build with musl
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.pyo3]
version = "0.17"

[features]
extension-module = ["pyo3/extension-module"]
chrono = ["pyo3/chrono"]
default = ["chrono"]