[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "feathrpiper"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
"Source Code" = "https://github.com/windoze/piper"
Issues = "https://github.com/windoze/piper/issues"

[tool.feathrpiper]
target_version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/chrono"]
