[package]
name = "standalone"
version = "0.4.3"
edition = "2021"

[dependencies]
dotenvy = "0.15"
piper = { path = "../piper", features = [] }
tokio = { version = "1.0", features = ["full"] }
poem = { version = "1", features = ["tokio-metrics"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[target.'cfg(target_env = "musl")'.dependencies]
# Use statically lined openssl when build with musl
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name = "piper"
path = "src/main.rs"
